<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/mv_perfil"
            android:icon="@drawable/account"
            android:title="@string/mp"/>

        <item
            android:id="@+id/mv_newcita"
            android:icon="@drawable/cita"
            android:title="@string/nc"/>

        <item
            android:id="@+id/mv_newpet"
            android:icon="@drawable/pet"
            android:title="@string/nm"/>

        <item
            android:id="@+id/mv_exit"
            android:icon="@drawable/logout"
            android:title="@string/exit"/>
    </group>

</menu>