<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/loginCard"
    app:cardCornerRadius="@dimen/loginCardRadius"
    android:elevation="5dp"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor">

    <LinearLayout style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <!-- TITULO LOS ESTILOS LOS ESTOY LLAMANDO DE STYLES.XML-->

        <TextView style="@style/estilachos_T_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rpet"/>

        <!-- NOMBRE DE LA MASCOTA -->

        <com.google.android.material.textfield.TextInputLayout style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/nomPet"
                android:inputType="text"
                android:hint="@string/nomPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- EDAD DE LA MASCOTA -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/edadPet"
                android:inputType="textEmailAddress"
                android:hint="@string/edadPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- PESO DE LA MASCOTA -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/kgPet"
                android:inputType="number"
                android:hint="@string/kgPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- RAZA DE LA MASCOTA -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/rzPet"
                android:inputType="textPassword"
                android:hint="@string/rzPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- SEXO DE LA MASCOTA -->

        <com.google.android.material.textfield.TextInputLayout style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/sexPet"
                android:inputType="text"
                android:hint="@string/sexPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- FC DE LA MASCOTA -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/fcPet"
                android:inputType="number"
                android:hint="@string/fcPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- CANT. VAC. DE LA MASCOTA -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/vacPet"
                android:inputType="number"
                android:hint="@string/vacPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- ALERGIAS DE LA MASCOTA -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/alergPet"
                android:inputType="textPassword"
                android:hint="@string/alergPet"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- FOTO DE LA MASCOTA -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText style="@style/estilachos_et"
                android:id="@+id/photoPet"
                android:inputType="textEmailAddress"
                android:hint="@string/photoPet"/>

        </com.google.android.material.textfield.TextInputLayout>

        <!-- BOTÓN PARA REGISTRARSE -->
        <Button  style="@style/button"
            android:id="@+id/btn_login"
            android:layout_width="wrap_content"
            android:text="@string/rpet"/>

        <!-- LÍNEA PARA REGRESAR AL INICIO -->
        <TextView style="@style/estilachos_tv_b"
            android:id="@+id/tv_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rl"/>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
